--- a/themes/custom/layouts/partials/head.html
+++ b/themes/custom/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <link rel="icon" href="favicon.ico" />
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nunito Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Reddit Sans" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
