--- a/themes/custom/layouts/partials/footer.html
+++ b/themes/custom/layouts/partials/footer.html
@@ -1,3 +1,1 @@
-<div id="copyright">
-    <p>&copy; Copyright {{ now.Year }} Adam Migus. All rights reserved.</p>
-</div>
+<div id="copyright">{{ .Site.Copyright }}</div>
