--- a/themes/custom/layouts/partials/head.html
+++ b/themes/custom/layouts/partials/head.html
@@ -1,4 +1,5 @@
 
+<link rel="icon" type="image/png" href="{{ `favicon.ico` | absURL }}">
 <link href="https://fonts.googleapis.com/css?family={{ site.Params.googleFont }}" rel="stylesheet"/>
 <style>
   body {
