--- a/themes/custom/assets/css/main.scss
+++ b/themes/custom/assets/css/main.scss
@@ -1,7 +1,8 @@
 body {
-  margin: 1rem;
+  font-size: 1.1rem;
+  margin: 2rem 3rem;
 }
 
 #copyright {
-  font-size: 0.75rem;
+  font-size: 0.7rem;
 }
