--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,7 @@
 body {
-  font-size: 1.1rem;
-  margin: 2rem 3rem; }
+  margin: 1rem; }
 
 #copyright {
   font-size: 0.7rem; }
 
-/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0ZGluIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBIiwiZmlsZSI6InN0ZGluIiwic291cmNlc0NvbnRlbnQiOlsiYm9keSB7XG4gIGZvbnQtc2l6ZTogMS4xcmVtO1xuICBtYXJnaW46IDJyZW0gM3JlbTsgfVxuXG4jY29weXJpZ2h0IHtcbiAgZm9udC1zaXplOiAwLjdyZW07IH1cbiJdfQ== */
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0ZGluIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBIiwiZmlsZSI6InN0ZGluIiwic291cmNlc0NvbnRlbnQiOlsiYm9keSB7XG4gIG1hcmdpbjogMXJlbTsgfVxuXG4jY29weXJpZ2h0IHtcbiAgZm9udC1zaXplOiAwLjdyZW07IH1cbiJdfQ== */
