--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -1,4 +1,4 @@
-{{- with resources.Get "css/main.scss"| toCSS | postCSS }}
+{{- with resources.Get "css/main.css" }}
   {{- if eq hugo.Environment "development" }}
     <link rel="stylesheet" href="{{ .RelPermalink }}">
   {{- else }}
