--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,7 @@
-<div id="copyright">{{ .Site.Copyright }}</div>
+<div id="redirect">
+    <input type="checkbox" id="redirect_cb">
+    <label for="redirect_cb">Do not redirect this page to one of the links above--I like staring at it!</label>
+</div>
+<div id="copyright">
+    <p>{{ .Site.Copyright }}</p>
+</div>
