--- a/layouts/adam/list.html
+++ b/layouts/adam/list.html
@@ -2,7 +2,7 @@
   <h1>{{ .Title }}</h1>
   {{ .Content }}
   <p>I also post here:</p>
-  <div class="posts">
+  <div class="pages">
   {{- range .Pages }}
     <p class="title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></p>
     <p class="summary">{{ .Summary }}</p>
