--- a/layouts/adam/list.html
+++ b/layouts/adam/list.html
@@ -1,10 +1,12 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
-  {{ .Content }}
-  <div class="pages">
+  <p>{{ .Content }}</p>
+  <h2>Posts</h2>
+  <div class="posts">
   {{- range .Pages }}
     <p class="title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></p>
     <p class="summary">{{ .Summary }}</p>
+    <p class="date">{{ .Date.Format "2006-01-02" }}</p>
   {{- end }}
   </div>
 {{ end }}
