--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta charset="utf-8">
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ page.Title }}{{ end }}</title>
-{{ partialCached "head/css.html" . }}
-{{ partialCached "head/js.html" . }}
+{{- partialCached "head/google-fonts.html" . }}
+{{- partialCached "head/css.html" . }}
+{{- partialCached "head/js.html" . }}
 {{template "_internal/google_analytics.html" .}}
