--- a/layouts/partials/head/js.html
+++ b/layouts/partials/head/js.html
@@ -1,14 +1,13 @@
-{{- range slice "js/copy-button.js" "js/main.js" }}
-  {{- with resources.Get . }}
-    {{- if eq hugo.Environment "development" }}
-      {{- with . | js.Build }}
-        <script src="{{ .RelPermalink }}"></script>
-      {{- end }}
-    {{- else }}
-      {{- $opts := dict "minify" true }}
-      {{- with . | js.Build $opts | fingerprint }}
-        <script src="{{ .RelPermalink }}" integrity="{{- .Data.Integrity }}" crossorigin="anonymous"></script>
-      {{- end }}
-    {{- end }}
-  {{- end }}
+{{- $scripts := slice }}
+{{- range resources.Match "js/*.js" }}
+{{- $scripts = $scripts | append . }}
+{{- end }}
+{{- with $scripts | resources.Concat "functions.js" | js.Build }}
+{{- if eq hugo.Environment "development" }}
+<script src="{{ .RelPermalink }}"></script>
+{{- else }}
+{{- with . | minify | fingerprint }}
+<script src="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous"></script>
+{{- end }}
+{{- end }}
 {{- end }}
