--- a/layouts/adam/single.html
+++ b/layouts/adam/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-  <a href="..">../</a>
+<h1>{{ .Title }}</h1>
+<p>{{ .Content }}</p>
+<a class="italic" href="..">../</a>
 {{ end }}
