--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ or site.Language.LanguageCode }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
-  {{ partial "head.html" . }}
+{{- partial "head.html" . }}
 </head>
-<body>
+<body class="container">
   <header>
-    {{ partial "header.html" . }}
+    {{- partial "header.html" . }}
   </header>
   <main>
-    {{ block "main" . }}{{ end }}
+    {{- block "main" . }}{{ end }}
   </main>
   <footer>
-    {{ partial "footer.html" . }}
+    {{- partial "footer.html" . }}
   </footer>
 </body>
 </html>
