--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,14 +3,14 @@
 <head>
 {{- partial "head.html" . }}
 </head>
-<body class="container">
-  <header>
+<body>
+  <header class="container">
     {{- partial "header.html" . }}
   </header>
-  <main>
+  <main  class="container">
     {{- block "main" . }}{{ end }}
   </main>
-  <footer>
+  <footer class="container">
     {{- partial "footer.html" . }}
   </footer>
 </body>
