--- a/layouts/shortcodes/codeblock.html
+++ b/layouts/shortcodes/codeblock.html
@@ -1,3 +1,3 @@
-<pre class="m-4 py-0 p-3 rounded-md min-w-96 w-3/4 text-gray-200 @if code.class == PowerShell { @apply bg-blue-950 } @else { bg-black }">
+<pre class="m-4 py-0 p-3 min-w-96 w-4/5 rounded-md text-gray-200 @if code.class == PowerShell { @apply bg-blue-950 } @else { bg-black }">
     <code class="whitespace-pre-wrap {{ delimit .Params " " }}">{{ .Inner | safeHTML }}</code>
 </pre>
