Upgrade tailwindcss from 3.x to 4.x.

--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -1,13 +1,13 @@
 {{- $styles := slice }}
-{{- range resources.Match "scss/*.scss" }}
-  {{- $styles = $styles | append . }}
+{{- range resources.Match "css/*.css" }}
+{{- $styles = $styles | append . }}
 {{- end }}
-{{- with $styles | resources.Concat "styles.css" | toCSS | resources.PostCSS }}
-  {{- if eq hugo.Environment "development" }}
-    <link rel="stylesheet" href="{{ .RelPermalink }}">
-  {{- else }}
-    {{- with . | minify | fingerprint }}
-      <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-    {{- end }}
-  {{- end }}
+{{- with $styles | resources.Concat "styles.css" | postCSS }}
+{{- if eq hugo.Environment "development" -}}
+<link rel="stylesheet" href="{{ .RelPermalink }}">
+{{- else -}}
+{{ with . | minify | fingerprint }}
+<link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
+{{ end }}
 {{- end }}
+{{- end -}}
