Update fontawesome and page fonts.

--- a/assets/css/_import.css
+++ b/assets/css/_import.css
@@ -1,2 +1,2 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Lato&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css");
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans&display=swap");
