--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+@theme {
+  --font-mono: 'Fira Mono', monospace;
+  --font-sans: 'Fira Sans', sans-serif;
+}
+
 @layer base {
   html {
     @apply bg-gray-100 text-base/relaxed;
