--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
-<html lang="{{ or site.Language.LanguageCode }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
+<html lang="{{ or site.Language.LanguageCode }}">
 <head>
-{{- partial "head.html" . }}
-</head>
-<body>
-  <header class="container">
+    <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="{{ `favicon.ico` | absURL }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>
+      {{- if .IsHome -}}
+      {{ site.Title }}
+      {{- else -}}
+      {{ page.Title }}
+      {{- end -}}
+    </title>
+    {{- partialCached "head/css.html" . }}
+    {{- if .Site.Params.fonts.google }}
+      {{- partialCached "head/googlefonts.html" . }}
+    {{- end }}
+    {{- partialCached "head/js.html" . }}
+    {{- template "_internal/google_analytics.html" . }}
+  </head>
+<body class="bg-gray-100 font-sans">
+  <header>
     {{- partial "header.html" . }}
   </header>
-  <main  class="container">
+  <main>
     {{- block "main" . }}{{ end }}
   </main>
-  <footer class="container">
-    {{- partial "footer.html" . }}
+  <footer>
+    {{- if not .IsHome }}
+    <p>
+        <a id="up" href="..">../</a>
+    </p>
+    {{- end }}
+    <p class="font-light text-xs text-gray-600 m-auto">
+      {{  .RenderString ":copyright:" }}
+      {{ .Site.Copyright }}.
+      All rights reserved.
+    </p>
   </footer>
 </body>
 </html>
