--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,28 +4,29 @@
 
 @layer base {
   h1 {
-    @apply font-bold text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl py-5;
+    @apply font-bold text-xl py-5;
   }
 
   h2 {
-    @apply font-semibold text-lg md:text-xl lg:text-2xl xl:text-3xl 2xl:text-4xl py-4;
+    @apply font-semibold text-lg py-4;
   }
 
   h3 {
-    @apply text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl py-3;
+    @apply text-base md:text-lg py-3;
   }
 
   h4, p {
-    @apply text-sm md:text-base lg:text-lg xl:text-xl 2xl:text-2xl;
+    @apply text-sm md:text-base py-2;
   }
 
   h5 {
-    @apply text-xs md:text-sm lg:text-base xl:text-lg 2xl:text-xl py-1;
+    @apply text-xs md:text-sm py-1;
   }
 
   h6 {
-    @apply text-xs md:text-xs lg:text-sm xl:text-base 2xl:text-lg py-1;
+    @apply text-xs font-light py-1;
   }
+  
   h1, h2, h3, h4, h5, h6, li, p {
     @apply font-sans mx-3 p-2;
   }
@@ -47,10 +48,10 @@
   }
 
   pre {
-    @apply m-4 p-4 pt-3 w-4/5 rounded-sm;
+    @apply m-4 p-4 pt-3 w-4/5 rounded-sm bg-black text-white ;
 
     code {
-      @apply font-mono bg-black text-white whitespace-pre-wrap;
+      @apply font-mono whitespace-pre-wrap;
     }
   }
 
