--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="{{ or site.Language.LanguageCode }}">
+<html lang="{{ site.LanguageCode | default `en-us` }}">
 <head>
-    <meta charset="utf-8">
+    <meta charset="{{ site.Params.Charset | default `utf-8` }}">
     <link rel="icon" type="image/png" href="{{ `favicon.ico` | absURL }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,12 +12,11 @@
       {{ page.Title }}
       {{- end -}}
     </title>
-    {{- partialCached "head/css.html" . }}
-    {{- if .Site.Params.fonts.google }}
+    {{- if .Params.fonts.google }}
       {{- partialCached "head/googlefonts.html" . }}
     {{- end }}
+    {{- partialCached "head/css.html" . }}
     {{- partialCached "head/js.html" . }}
-    {{- template "_internal/google_analytics.html" . }}
   </head>
 <body class="bg-gray-100 font-sans">
   <header>
@@ -38,5 +37,8 @@
       All rights reserved.
     </p>
   </footer>
+  {{- if .Site.Config.Services.GoogleAnalytics.ID }}
+  {{- template "_internal/google_analytics.html" . }}
+  {{- end }}
 </body>
 </html>
